<resources>
    <string name="app_name">Ahoy Weather App</string>
    <string name="permission_rationale">To get your location, please allow Location permission</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_weather">Weather</string>
    <string name="permission_denied_explanation">Location permission is needed to get your location.</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="weather_icon">Weather icon</string>
    <string name="temperature_c">%1$s°C</string>
    <string name="temperature_f">%1$s°F</string>
    <string name="degree_c">°C</string>
    <string name="degree_f">°F</string>
    <string name="wind_speed">WIND SPEED</string>
    <string name="description">DESCRIPTION</string>
    <string name="humidity">HUMIDITY</string>
    <string name="sunset">SUNSET</string>
    <string name="sunrise">SUNRISE</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="no_favorites_found">No Favorites Found</string>
    <string name="action_details">Details</string>
    <string name="channel_name">Reminder Channel</string>
    <string name="channel_description">Daily reminder for the weather</string>
    <string name="notification_title">Remember to check the weather!</string>
    <string name="notification_description">Logging your transactions daily can help you manage your finances better.</string>
</resources>