<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/weather"
        android:icon="@mipmap/ic_launcher_round"
        android:contentDescription="@string/action_weather"
        android:title="@string/action_weather" />
    <item
        android:id="@+id/favorites"
        android:icon="@mipmap/ic_launcher_round"
        android:contentDescription="@string/action_favorites"
        android:title="@string/action_favorites" />
    <item
        android:id="@+id/search"
        android:icon="@mipmap/ic_launcher_round"
        android:contentDescription="@string/action_search"
        android:title="@string/action_search" />
    <item
        android:id="@+id/settings"
        android:icon="@mipmap/ic_launcher_round"
        android:contentDescription="@string/action_settings"
        android:title="@string/action_settings" />
</menu>