<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/weather">

    <fragment
        android:id="@+id/weather"
        android:name="bassem.ahoy.weather.ui.weather.WeatherFragment"
        android:label="@string/action_weather"
        tools:layout="@layout/fragment_weather">

        <argument
            android:name="latitude"
            app:argType="float" />
        <argument
            android:name="longitude"
            app:argType="float" />

    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="bassem.ahoy.weather.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/search"
        android:name="bassem.ahoy.weather.ui.search.SearchFragment"
        android:label="@string/action_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_weather"
            app:destination="@id/weather" />
    </fragment>

    <fragment
        android:id="@+id/favorites"
        android:name="bassem.ahoy.weather.ui.favorites.FavoritesFragment"
        android:label="@string/action_favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favorites_to_weather"
            app:destination="@id/weather" />
    </fragment>

</navigation>