<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <View
        android:id="@+id/separator_main"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_sunrise_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/sunrise"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_main"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/text_view_sunrise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="@id/text_view_sunrise_title"
        app:layout_constraintStart_toStartOf="@id/text_view_sunrise_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_sunrise_title"
        tools:text="12:00 AM" />

    <TextView
        android:id="@+id/text_view_sunset_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/sunset"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_main"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/text_view_sunset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="@id/text_view_sunset_title"
        app:layout_constraintStart_toStartOf="@id/text_view_sunset_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_sunset_title"
        tools:text="12:00 AM" />

    <View
        android:id="@+id/separator_secondary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_view_sunrise" />

    <TextView
        android:id="@+id/text_view_humidity_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/humidity"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_secondary"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/text_view_humidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="@id/text_view_humidity_title"
        app:layout_constraintStart_toStartOf="@id/text_view_humidity_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_humidity_title"
        tools:text="35%" />

    <TextView
        android:id="@+id/text_view_speed_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/wind_speed"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_secondary"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/text_view_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="@id/text_view_speed_title"
        app:layout_constraintStart_toStartOf="@id/text_view_speed_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_speed_title"
        tools:text="s 22.5 mph" />


</androidx.constraintlayout.widget.ConstraintLayout>
